JENKINS-70066: Fix null check of parameters
The `@DataBoundConstructor` for `ScriptlerBuilder` takes a list of
parameters for the given script. It was annotated as `@NotNull`, but
`Descriptor.bindJSON` could occasionally pass `null` for the parameters
list. Fix this by annotating the parameter as `@CheckForNull` and
performing the appropriate null checks.

(cherry picked from commit adce718b3e4085dd57cc45ab5b2bac59c55ba960)