@@ -77,16 +77,24 @@ public class ScriptlerBuilder extends Builder implements Serializable {
     /**
      * @deprecated as of 3.5; use {@link #ScriptlerBuilder(String, String, boolean, List)}
      */
-    @Deprecated
-    public ScriptlerBuilder(String builderId, String scriptId, boolean propagateParams, Parameter[] parameters) {
-        this(builderId, scriptId, propagateParams, Arrays.asList(Objects.requireNonNull(parameters)));
+    @Deprecated(since = "3.5")
+    public ScriptlerBuilder(
+            @CheckForNull String builderId,
+            @CheckForNull String scriptId,
+            boolean propagateParams,
+            @CheckForNull Parameter[] parameters) {
+        this(builderId, scriptId, propagateParams, parameters == null ? List.of() : List.of(parameters));
     }
 
     @DataBoundConstructor
-    public ScriptlerBuilder(String builderId, String scriptId, boolean propagateParams, @NonNull List<Parameter> parameters) {
+    public ScriptlerBuilder(
+            @CheckForNull String builderId,
+            @CheckForNull String scriptId,
+            boolean propagateParams,
+            @CheckForNull List<Parameter> parameters) {
         this.builderId = builderId;
         this.scriptId = scriptId;
-        this.parameters = new ArrayList<>(parameters);
+        this.parameters = parameters == null ? List.of() : List.copyOf(parameters);
         this.propagateParams = propagateParams;
     }
 
@@ -180,7 +188,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
 
     @NonNull
     public List<Parameter> getParametersList() {
-        return Collections.unmodifiableList(parameters);
+        return parameters;
     }
 
     public String getBuilderId() {
@@ -227,8 +235,9 @@ public class ScriptlerBuilder extends Builder implements Serializable {
 
         try {
 
-            // expand the parameters before passing these to the execution, this is to allow any token macro to resolve parameter values
-            List<Parameter> expandedParams = new LinkedList<>();
+            // expand the parameters before passing these to the execution, this is to allow any token macro to resolve
+            // parameter values
+            List<Parameter> expandedParams = new ArrayList<>();
 
             if (propagateParams) {
                 final ParametersAction paramsAction = build.getAction(ParametersAction.class);
@@ -365,7 +374,7 @@ public class ScriptlerBuilder extends Builder implements Serializable {
             }
 
             if (builder == null) {
-                builder = new ScriptlerBuilder(builderId, null, false, Collections.emptyList());
+                builder = new ScriptlerBuilder(builderId, null, false, List.of());
             }
 
             return builder.recreateBuilderWithBuilderIdIfRequired();
@@ -373,9 +382,8 @@ public class ScriptlerBuilder extends Builder implements Serializable {
 
         public List<Script> getScripts() {
             // TODO currently only script for RUN_SCRIPT permissions are returned?
-            Set<Script> scripts = getConfig().getScripts();
             List<Script> scriptsForBuilder = new ArrayList<>();
-            for (Script script : scripts) {
+            for (Script script : getConfig().getScripts()) {
                 if (script.nonAdministerUsing) {
                     scriptsForBuilder.add(script);
                 }
